# TTrail

./: README.md  pyproject.toml  requirements.txt
ttrail/: cli.py  utils.py
ttrail/internals/: analyze.py  events.py
